# GameGenie-X

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  lint.yml  publish.yml
docs/: alphabet.md  encoding.md  patch_model.md  profiles.md  roadmap.md
examples/: demo_codes.md
fuzz/: test_fuzzing.py
profiles/: n3ds.toml  nes.toml  psvita.toml  rpg_hero.json  scifi_space.json  snes.toml  switch.toml  xboxone.toml  yuzu.toml
src/gamegenie_x/: __init__.py  alphabet.py  bitpack.py  checksum.py  cli.py  decoder.py  detector.py  encoder.py  game_profiles.py  generator.py  library.py  models.py  patch_v2.py  patcher.py  preview.py  profiles.py  safety.py  sandbox.py  validator.py
src/gamegenie_x/profiles_data/: citra.toml  dolphin.toml  gameboy.toml  gamegear.toml  genesis.toml  nds.toml  pc.toml  ps4.toml  ps5.toml  psp.toml  rpcs3.toml  xboxseries.toml
src/gamegenie_x/web/: app.py  index.html  shares.json
tests/: __init__.py  conftest.py  test_alphabet.py  test_bitpack.py  test_checksum.py  test_ci_quality.py  test_cli.py  test_cli_v2.py  test_decoder.py  test_encoder.py  test_fuzz.py  test_generator.py  test_library.py  test_modern_profiles.py  test_new_platforms.py  test_patcher.py  test_preview.py  test_profile_system_v2.py  test_profiles.py  test_roundtrip.py  test_sandbox.py  test_v2_features.py  test_web.py
