[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gamegenie-x"
version = "1.0.0"
description = "A modern, platform-unified Game Genie patch encoding engine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Don Feeney" }]
keywords = ["game-genie", "retro", "cheat-codes", "rom-patching", "encoding"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
dependencies = ["tomli >= 2.0; python_version < '3.11'"]

[project.scripts]
gamegenie-x = "gamegenie_x.cli:main"

[tool.hatch.build]
include = [
  "src/gamegenie_x/profiles_data/*.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "C90", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 45

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
fail-under = 100
verbose = 2
quiet = false
color = true
